--- a/server/frontend/src/styles/App.css
+++ b/server/frontend/src/styles/App.css
@@ -1,55 +1,34 @@
 /* Grundstruktur */
 .container {
     display: flex;
-    min-height: 100vh;
+    width: 100%;
     font-family: Arial, sans-serif;
-}
-
-/* Sidebar */
-.sidebar {
-    width: 220px;
-    background-color: #075985; /* Blau */
-    color: white;
-    padding: 20px;
-}
-
-.sidebar h1 {
-    font-size: 24px;
-    margin-bottom: 40px;
-}
-
-.menu a {
-    display: block;
-    color: white;
-    text-decoration: none;
-    margin: 10px 0;
-}
-
-.menu a:hover {
-    text-decoration: underline;
 }
 
 /* Main Area */
 .main {
-    flex-grow: 1;
+    width: 100%;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
     background-color: #f0f4f8;
-    padding: 20px;
 }
 
 /* Top Info Boxes */
 .info-boxes {
     display: flex;
-    gap: 20px;
+    justify-content: space-between;
+    width: 100%;
     margin-bottom: 30px;
 }
 
 .box {
-    flex: 1;
+    width: 15%;
     background-color: white; /* Dunkelblau */
     border: 1px solid #156082;
     color: #156082;
-    padding-left: 15px;
-    border-radius: 8px;
+    padding: 30px;
+    border-radius: 15px;
     text-align: left;
 }
 
@@ -59,7 +38,6 @@
     display: flex;
     flex-direction: column;
     align-content: center;
-    gap: 20px;
 }
 
 /* Gate Status Section */
@@ -67,15 +45,13 @@
     width: 100%;
 }
 .gate-status-container {
-    width: 100%;
-    margin-top: 20px;
+    padding: 16px;
     background: #fff;
     border-radius: 12px;
     box-shadow: 0 0 6px rgba(0,0,0,0.1);
 }
 
 .gate-status-header {
-    padding: 16px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -88,7 +64,6 @@
 
 .status-table {
     width: 100%;
-    border-collapse: collapse;
     margin-top: 16px;
 }
 
@@ -177,6 +152,115 @@
 
 .help-icon:hover {
     color: #1976d2;
+}
+
+.button-box{
+    display: flex;
+    width: 100%;
+}
+
+@media (max-width: 768px) {
+    .gate-status-header {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+    }
+
+    .gate-controls {
+        flex-direction: column;
+        width: 90%;
+    }
+
+    .status-table {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        overflow-x: auto;
+    }
+
+    .status-table thead {
+        display: none;
+    }
+
+    .status-table tbody{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .status-table td{
+        display: block;
+        width: 90%;
+    }
+
+    .status-table tr {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-bottom: 1rem;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        background-color: #fff;
+    }
+
+    .status-table td {
+        text-align: right;
+        position: relative;
+    }
+
+    .status-table td::before {
+        content: attr(data-label);
+        position: absolute;
+        left: 10px;
+        width: 100%;
+        font-weight: bold;
+        text-align: left;
+    }
+
+    .status-table .coords,
+    .date {
+        font-size: 0.7rem;
+    }
+    .gate-controls button,
+    .gate-controls .MuiFormControl-root {
+        width: 30%;
+    }
+    .button-box{
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+        justify-content: space-between;
+    }
+    .gate-controls{
+        display: flex;
+        flex-direction: column;
+    }
+
+    /* Top Info Boxes */
+    .info-boxes {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        align-items: center;
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .box {
+        width:15%;
+        background-color: white; /* Dunkelblau */
+        border: 1px solid #156082;
+        color: #156082;
+        border-radius: 15px;
+        text-align: left;
+        margin: 0;
+        padding: 15px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
 }
 
 
